--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -112,5 +112,12 @@
     <string name="weekday_limited">Beperkt tot sommige dagen van de week</string>
     <string name="reminders">Herinneringen</string>
     <string name="filter">Filter</string>
-    <string name="one_week">7 dagen</string>
+    <string name="seven_days">7 dagen</string>
+    <string name="analysis">Analyse</string>
+    <string name="tabular_view">Tabelwergave</string>
+    <string name="fourteen_days">14 dagen</string>
+    <string name="thirty_days">30 dagen</string>
+    <string name="total">Totaal</string>
+    <string name="last_n_days">Laatste %1$d dagen</string>
+    <string name="name">Naam</string>
 </resources>
