--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -116,4 +116,5 @@
     <string name="name">Name</string>
     <string name="event_data">Ereignisdaten</string>
     <string name="backup">Backup</string>
+    <string name="restore_events_start">Alle Ereignisse werden überschrieben.\n\nFortfahren?</string>
 </resources>
