--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -211,5 +211,6 @@
     <string name="name">Nom</string>
     <string name="event_data">Données sur les événements</string>
     <string name="backup">Sauvegarde</string>
+    <string name="restore_events_start">Cela remplacera tous les événements de rappel.\n\nPoursuivre ?</string>
 
 </resources>
