--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -67,17 +67,11 @@
 
     <string name="are_you_sure_delete_events">Êtes-vous sûr de supprimer tous les événements ?</string>
 
-    <string name="export">Exporter des événements</string>
-
     <string name="swipe_left">Balayez vers la gauche</string>
 
     <string name="long_press">Appui long</string>
 
     <string name="delete_items">Supprimer des éléments</string>
-
-    <string name="actions">Actions</string>
-
-    <string name="information">Information</string>
 
     <string name="show_notifications">Afficher les notifications</string>
 
@@ -115,8 +109,6 @@
 
     <string name="notification_tone_title">Tonalité de notification</string>
 
-    <string name="select_format">Sélectionnez le format</string>
-
     <string name="cycle_consecutive_days">Jours actifs</string>
 
     <string name="days">jours</string>
@@ -126,8 +118,6 @@
     <string name="default_theme">Défaut</string>
 
     <string name="alternative">Alternative</string>
-
-    <string name="instructions">Instructions</string>
 
     <string name="no_instructions">aucune instruction</string>
 
@@ -143,9 +133,7 @@
 
     <string name="instructions_label">Instructions supplémentaires (par exemple avant les repas)</string>
 
-    <string name="backup_medicine">Paramètres de sauvegarde des médicaments</string>
-
-    <string name="create">Créer</string>
+    <string name="medicine_data">Données sur les médicaments</string>
 
     <string name="restore">Restaurer</string>
 
@@ -221,5 +209,10 @@
     <string name="total">Total</string>
     <string name="last_n_days">Dernier %1$d jours</string>
     <string name="name">Nom</string>
+    <string name="event_data">Données sur les événements</string>
+    <string name="backup">Sauvegarde</string>
+    <string name="export_csv">Exporter en CSV</string>
+    <string name="export_pdf">Exporter en PDF</string>
+    <string name="restore_events_start">Cela remplacera tous les événements de rappel.\n\nPoursuivre ?</string>
 
 </resources>
