--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -119,4 +119,5 @@
     <string name="export_csv">Export als CSV</string>
     <string name="export_pdf">Export als PDF</string>
     <string name="restore_events_start">Alle Ereignisse werden überschrieben.\n\nFortfahren?</string>
+    <string name="taken_now">Jetzt eingenommen</string>
 </resources>
