--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -118,4 +118,5 @@
     <string name="export_csv">Exportar en CSV</string>
     <string name="restore_events_start">Esto reemplazará todos los eventos de recordatorio.\n\n¿Continuar?</string>
     <string name="export_pdf">Exportar en PDF</string>
+    <string name="taken_now">Tomado ahora</string>
 </resources>
