--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -214,5 +214,6 @@
     <string name="export_csv">Exporter en CSV</string>
     <string name="export_pdf">Exporter en PDF</string>
     <string name="restore_events_start">Cela remplacera tous les événements de rappel.\n\nPoursuivre ?</string>
+    <string name="taken_now">Pris maintenant</string>
 
 </resources>
