--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="event_data">Event data</string>
     <string name="backup">Backup</string>
     <string name="restore_events_start">This will replace all reminder events.\n\nContinue?</string>
+    <string name="taken_now">Taken now</string>
 </resources>
