Implemented event update (except for times)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,5 @@
     <string name="event_name">Event name</string>
     <string name="edit_event">Edit event</string>
     <string name="date">Date</string>
+    <string name="amount">Amount</string>
 </resources>
