Inventory first implementation
Signed-off-by: Jean-Yves <7360784+docjyJ@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,4 +124,6 @@
     <string name="taken_now">Taken now</string>
     <string name="event_name">Event name</string>
     <string name="edit_event">Edit event</string>
+    <string name="inventory">Inventory</string>
+    <string name="number">Number</string>
 </resources>
