--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -20,8 +20,6 @@
         <item quantity="one">%1$d hatırlatma\n%2$s</item>
         <item quantity="other">%1$d anımsatıcı\n%2$s</item>
     </plurals>
-    <string name="channel_name" translatable="false">MedTimer</string>
-    <string name="channel_description" translatable="false">Notifications from MedTimer</string>
     <string name="notification_title">İlaç hatırlatıcısı</string>
     <string name="notification_content">Saat %1$s - %3$s%4$s\'den %2$s alma zamanı</string>
     <string name="notification_taken">ALINDI</string>
@@ -29,7 +27,7 @@
     <string name="skipped">Atlandı</string>
     <string name="reminder_event">%1$s / %2$s, %3$s</string>
     <string name="recent_events">Son etkinlikler</string>
-    <string name="next_reminder">Sonraki hatırlatma</string>
+    <string name="next_reminders">Sonraki hatırlatmar</string>
     <string name="version">Sürüm %s</string>
     <string name="are_you_sure_delete_reminder">Hatırlatıcıyı silmek istediğinizden emin misiniz?</string>
     <string name="clear_events">Etkinlikleri temizle</string>
@@ -108,7 +106,6 @@
     <string name="cycle_reminders">Döngüsel hatırlatıcılar</string>
     <string name="weekday_limited">Bazı hafta içi günlerle sınırlıdır</string>
     <string name="reminders">Hatırlatmalar</string>
-    <string name="sort" translatable="false">Sort</string>
     <string name="filter">Filtre</string>
     <string name="seven_days">7 gün</string>
     <string name="analysis">Analiz</string>
@@ -124,4 +121,5 @@
     <string name="taken_now">Şimdi alındı</string>
     <string name="event_name">Etkinlik adı</string>
     <string name="edit_event">Etkinliği düzenle</string>
+    <string name="show_all">Hepsini göster</string>
 </resources>
